Mon Feb 12 16:09:24 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* run.c (run_popen): Changed more Popen() to run_popen()

Mon Feb 12 03:33:27 1996  Benjamin J. Lee  <benjamin@cyclic.com>

        * run.c: Changed Popen() to run_popen() for the benefit of
        case-insensitive linkers (VMS) which confuse Popen() with popen()

Fri Feb  9 22:10:12 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (distclean): Remove Makefile.

	* config.h: Remove SYSTEM_COMMENT_TABLE.

Thu Feb  1 15:09:17 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Remove RM; no longer used.

	* filesubr.c: Remove rcsid.

Thu Jan 11 16:01:27 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Update with information for Visual C++ 4.0, some
	warnings that weren't mentioned, etc.

Thu Jan 11 12:04:42 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* options.h: remove CVS_NOADMIN

Wed Jan  3 16:17:19 1996  Jon Dart  <jdart@tss.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* run.c (filter_stream_through_program): If pidp is NULL, don't
	store to *pidp.
	* ndir.h: Change MAXNAMLEN to 255.
	* run.c (build_command): Deal with it if there are no arguments at
	all.

Mon Jan  1 23:40:01 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (link_file): New function.

	* README: Mention CRLF vs. LF in cvsnt.mak.  Other minor revisions.

Fri Dec 22 12:00:00 1995  Jim Kingdon  <kingdon@peary.cyclic.com>

	* run.c (filter_stream_through_program): On error, error() rather
	than returning -1.

Thu Dec 21 16:00:00 1995  Jim Kingdon  <kingdon@peary.cyclic.com>

	* options.h: Don't define NO_SOCKET_TO_FD.

Mon Dec 18 09:57:29 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Explain NO_SOCKET_TO_FD some more.

Sun Dec 17 21:19:18 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * options.h (NO_SOCKET_TO_FD): define to 1.

Tue Dec 12 19:18:00 1995  Karl Fogel  <kfogel@floss.cyclic.com>
