@@ -5,6 +5,8 @@
  */
 
 #include <ctype.h>
+#include <stdio.h>
+#include <conio.h>
 
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
@@ -41,4 +43,23 @@ pid_t
 getpid ()
 {
     return (pid_t) GetCurrentProcessId();
+}
+
+char *
+getpass (const char *prompt)
+{
+    static char pwd_buf[128];
+    size_t i;
+
+    fputs (prompt, stderr);
+    fflush (stderr);
+    for (i = 0; i < sizeof (pwd_buf) - 1; ++i)
+    {
+	pwd_buf[i] = _getch ();
+	if (pwd_buf[i] == '\r')
+	    break;
+    }
+    pwd_buf[i] = '\0';
+    fputs ("\n", stderr);
+    return pwd_buf;
 }
